# SFML-Project-template

./: CMakeLists.txt  README.md  main.cpp
